[gd_scene load_steps=5 format=3 uid="uid://c5w0k1pfkhqnb"]

[ext_resource type="FontFile" uid="uid://bdpbpkhnq8lny" path="res://assets/8-bit-pusab.ttf" id="1_6u37w"]
[ext_resource type="Script" path="res://src/ui/map_select_layer.gd" id="1_ga63m"]
[ext_resource type="Texture2D" uid="uid://bfqpgrqixy64o" path="res://assets/Treasure_Chest.png" id="2_v6m5i"]

[sub_resource type="LabelSettings" id="LabelSettings_8yrfb"]
font = ExtResource("1_6u37w")
font_size = 23
font_color = Color(0.462745, 0.0431373, 0.0313726, 1)

[node name="MapSelectLayer" type="CanvasLayer"]
script = ExtResource("1_ga63m")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.74902, 0.913725, 0.980392, 1)

[node name="BuyOceanDialog" type="ColorRect" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1320.0
offset_top = -512.0
offset_right = -256.0
offset_bottom = -464.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.243137, 0.643137, 0.780392, 1)

[node name="BuyDialogLabel" type="Label" parent="ColorRect/BuyOceanDialog"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0.376471, 1)
theme_override_fonts/font = ExtResource("1_6u37w")
theme_override_font_sizes/font_size = 12
text = "Unlock Ocean for 5 Treasure"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Ocean" type="Control" parent="ColorRect"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BuyOceanButton" type="TextureButton" parent="ColorRect/Ocean"]
layout_mode = 0
offset_left = 1240.0
offset_top = 560.0
offset_right = 1656.0
offset_bottom = 976.0
scale = Vector2(0.125, 0.125)
texture_normal = ExtResource("2_v6m5i")

[node name="Cost" type="Label" parent="ColorRect/Ocean"]
layout_mode = 0
offset_left = 1280.0
offset_top = 584.0
offset_right = 1320.0
offset_bottom = 630.0
text = "5"
label_settings = SubResource("LabelSettings_8yrfb")

[node name="BuyLavaDialog" type="ColorRect" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1320.0
offset_top = -448.0
offset_right = -256.0
offset_bottom = -400.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.243137, 0.643137, 0.780392, 1)

[node name="BuyDialogLabel" type="Label" parent="ColorRect/BuyLavaDialog"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0.376471, 1)
theme_override_fonts/font = ExtResource("1_6u37w")
theme_override_font_sizes/font_size = 12
text = "Unlock Lava for 10 Treasure"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Lava" type="Control" parent="ColorRect"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BuyLavaButton" type="TextureButton" parent="ColorRect/Lava"]
layout_mode = 0
offset_left = 1240.0
offset_top = 624.0
offset_right = 1656.0
offset_bottom = 1040.0
scale = Vector2(0.125, 0.125)
texture_normal = ExtResource("2_v6m5i")

[node name="Cost" type="Label" parent="ColorRect/Lava"]
layout_mode = 0
offset_left = 1280.0
offset_top = 648.0
offset_right = 1320.0
offset_bottom = 694.0
text = "10"
label_settings = SubResource("LabelSettings_8yrfb")

[node name="MapSelection" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -112.0
offset_right = 112.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="SelectAMap" type="Label" parent="ColorRect/MapSelection"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0.376471, 1)
theme_override_fonts/font = ExtResource("1_6u37w")
theme_override_font_sizes/font_size = 48
text = "Select a map:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="River" type="Button" parent="ColorRect/MapSelection"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6u37w")
theme_override_font_sizes/font_size = 28
disabled = true
text = "River"

[node name="Ocean" type="Button" parent="ColorRect/MapSelection"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6u37w")
theme_override_font_sizes/font_size = 28
disabled = true
text = "Ocean"

[node name="Lava" type="Button" parent="ColorRect/MapSelection"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6u37w")
theme_override_font_sizes/font_size = 28
disabled = true
text = "Lava"

[connection signal="mouse_entered" from="ColorRect/Ocean/BuyOceanButton" to="." method="_on_buy_ocean_button_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/Ocean/BuyOceanButton" to="." method="_on_buy_ocean_button_mouse_exited"]
[connection signal="pressed" from="ColorRect/Ocean/BuyOceanButton" to="." method="_on_buy_ocean_button_pressed"]
[connection signal="mouse_entered" from="ColorRect/Lava/BuyLavaButton" to="." method="_on_buy_lava_button_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/Lava/BuyLavaButton" to="." method="_on_buy_lava_button_mouse_exited"]
[connection signal="pressed" from="ColorRect/Lava/BuyLavaButton" to="." method="_on_buy_lava_button_pressed"]
[connection signal="pressed" from="ColorRect/MapSelection/River" to="." method="_on_river_pressed"]
[connection signal="pressed" from="ColorRect/MapSelection/Ocean" to="." method="_on_ocean_pressed"]
[connection signal="pressed" from="ColorRect/MapSelection/Lava" to="." method="_on_lava_pressed"]
